[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "adaptive-tutor-env"
version = "1.0.0"
description = "OpenEnv Adaptive Student Tutoring Environment using Bayesian Knowledge Tracing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pyyaml>=6.0",
    "stable-baselines3>=2.0.0",
    "gymnasium>=1.0.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.23.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "graders*", "baseline*"]
